CSS - fixed comment overflow in article page & changed nav links font size

--- a/public/style/article.css
+++ b/public/style/article.css
@@ -59,4 +59,5 @@ article {
 
 .comment .content {
     font-size: 15px;
+    overflow-x: auto;
 }
